--- a/Dockerfile1
+++ b/Dockerfile1
@@ -2,6 +2,7 @@ FROM openjdk:8
 LABEL author='Jithin'
 ARG downloadlocation
 ENV applicationpath='/springpet.jar'
+ENV dumy='jithin'
 ADD ${downloadlocation} ${applicationpath}
 EXPOSE 8080
 CMD java -jar ${applicationpath}
